# ultimate-prompt-generator

./: Makefile  config_manager.py  config_types.py  llm_manager.py  main.py  prompt_generator.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
core_prompts/: floatingprompt.py
src/upg/cli/: commands.py
src/upg/config/: manager.py  types.py
src/upg/core/: llm.py
tests/: conftest.py  test_cli.py  test_config.py  test_generator.py  test_llm.py
