[tool.poetry]
name = "ultimate-prompt-generator"
version = "0.1.0"
description = ""
authors = ["npavlin <np@letsnova.ru>"]
readme = "README.md"
packages = [{include = "ultimate_prompt_generator"}]

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.11.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
